# cognos-to-powerbi

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: ai-providers.md  architecture.md  coverage.md  data-modeling.md  getting-started.md  index.md  launch-playbook.md  roadmap.md
examples/: calculated_report.xml  complex_sales_report.xml  sample_dashboard.json  sample_data_module.json  sample_model.xml  sample_report.xml  star_schema_model.xml
examples/sql/: setup_demo_db.sql
src/cognos2powerbi/: __init__.py  cli.py
src/cognos2powerbi/api/: __init__.py  main.py
src/cognos2powerbi/core/: __init__.py  batch.py  detect.py  pipeline.py
src/cognos2powerbi/core/ai/: __init__.py  base.py  providers.py
src/cognos2powerbi/core/generators/: __init__.py  pbip_generator.py  rdl_generator.py
src/cognos2powerbi/core/ir/: __init__.py  models.py
src/cognos2powerbi/core/modeling/: __init__.py  star_schema.py
src/cognos2powerbi/core/parsers/: __init__.py  dashboard_parser.py  data_module_parser.py  model_parser.py  report_parser.py
src/cognos2powerbi/core/translate/: __init__.py  expressions.py
tests/: __init__.py  test_ai_azure.py  test_api.py  test_batch.py  test_cli_review.py  test_dashboard_parser.py  test_data_module_parser.py  test_detect.py  test_expressions.py  test_model_parser.py  test_pbip_generator.py  test_rdl_generator.py  test_report_calculations.py  test_report_parser.py  test_star_schema.py
web/: app.js  index.html  styles.css
